# TeaShell

./: .gitignore  README.md  config.yaml  pyproject.toml
teashell/: __init__.py  _err.py  art.py  color.py  config.py  enums.py  grhh.py  logger.py  stdfio.py
teashell/commands/: __init__.py  core.py
teashell/exec/spin/: donut.c
teashell/exec/tetris/: main.cpp
teashell/plugins/game-of-life/: gol.py
teashell/scripts/: cleanup_logs.py
