[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teashell"
version = "0.1.0"
description = "A mixed terminal shell"
authors = [{ name = "Torrez Tsoi", email = "tcrrxzz@gmail.com" }]
dependencies = []

[tool.setuptools]
packages = ["your_project"]

[tool.setuptools.package-data]
your_project = ["data/*.txt"]  # Include non-Python files in package

[project.scripts]
tsh = "your_project.cli:main"  # CLI command if needed

