[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teashell"
version = "0.1.0"
description = "A mixed terminal shell"
authors = [{ name = "Torrez Tsoi", email = "tcrrxzz@gmail.com" }]
dependencies = []

[tool.setuptools]
packages = ["teashell"]

# [tool.setuptools.package-data]
# teashell = ["data/*.txt"]  # Include non-Python files in package

[project.scripts]
tsh = "teashell.cli:main"  # CLI command if needed

